--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         </main>
 
+	<!-- Scripts -->
         <script src="Scripts/timer.js"></script>
         <script src="Scripts/index.js"></script>
 
